hphp/test/quick/exceptions_clone.php.expectf
Fatal error: Trying to clone an uncloneable object of class Exception in %s/test/quick/exceptions_clone.php on line 3